name:           alpha
version:        1.0.15
synopsis:       A compiler for the Alpha language
description:    Alpha is a programming language that aims at being very simple and 
                low-level, so as to be efficient, while at the same time
                being able to climb in abstraction through introspection
                in the Lisp Way.
category:       Compiler
homepage:       http://www.alpha-lang.net/
author:         Marc Coiffier
maintainer:     marc.coiffier@gmail.com
stability:      alpha
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6

source-repository head
  type: git
  location: git://github.com/lih/Alpha.git

executable alpha
  build-depends:  base<=4.6.1.0, bytestring, mtl, containers, array, cereal, bimap, unix, views, readline, filepath, directory, parsec, bindings-posix, safe
  main-is:        Main.hs
  other-modules:  Architectures Compile Compile.Monad Context Context.Language Context.Types Format ID My.Control.Monad My.Control.Monad.Future My.Control.Monad.WriterAcc My.Data.Either My.Data.List My.Data.Relation My.Data.Tree Misc Settings PCode PCode.Builtin PCode.Instruction PCode.Value Serialize Specialize Specialize.Architecture Specialize.BinCode Specialize.Frame Specialize.Info Specialize.Memory Specialize.Monad Specialize.X86_64 Specialize.X86_64.Binary Syntax Syntax.Parse Translate
  ghc-options:    -pgmP cpphs -optP --hashes -optP --cpp -fwarn-dodgy-foreign-imports -fwarn-name-shadowing -Werror
  hs-source-dirs: src
  c-sources:      src/formats.c


