name:           alpha
version:        1.0.15
synopsis:       A compiler for the Alpha language
description:    Alpha is a programming language that aims at being very simple and 
                low-level, so as to be efficient, while at the same time
                being able to climb in abstraction through introspection
                in the Lisp Way.
category:       Compiler
homepage:       http://www.alpha-lang.net/
author:         Marc Coiffier
maintainer:     marc.coiffier@gmail.com
stability:      alpha
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6

source-repository head
  type: git
  location: git://github.com/lih/Alpha.git

library
  hs-source-dirs: lib-src
  exposed-modules: Compile Compile.Monad Context.Language ID PCode PCode.Builtin PCode.Instruction PCode.Value Context.Types Context My.Control.Monad My.Control.Monad.Future My.Control.Monad.WriterAcc My.Data.Either My.Data.List My.Data.Relation My.Data.Tree Misc  Serialize Specialize Specialize.Architecture Specialize.BinCode Specialize.Frame Specialize.Info Specialize.Memory Specialize.Monad Syntax Syntax.Parse Translate

executable alpha
  build-depends:  base<=4.6.1.0, bytestring, mtl, containers, array, cereal, bimap, unix, views, readline, filepath, directory, parsec, bindings-posix, safe
  main-is:        Main.hs
  other-modules:  Architectures Format Settings Specialize.X86_64 Specialize.X86_64.Binary
  ghc-options:    -pgmP cpphs -optP --hashes -optP --cpp -fwarn-dodgy-foreign-imports -fwarn-name-shadowing -Werror
  hs-source-dirs: alpha-src lib-src
  c-sources:      alpha-src/formats.c

  

