name:           Alpha
version:        0.9
synopsis:       A compiler for the Alpha language
author:         Marc Coiffier
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.2

executable alpha
  build-depends:  base, unix, containers, array, mtl, bytestring, bimap, ghc-prim, directory, filepath, cereal, parsec
  main-is:        Alpha.hs
  other-modules:  Specialize.Types, Specialize.Architecture, IR.Builtin, IR.Instruction, IR.Value, IR, Serialize, Environment, Compile, Compile.State, Compile.Utils, Util, Syntax.Parse, Translate, Specialize, Util.ID, Util.Monad, Util.TimeLine, Util.List, Util.Misc, Util.Graph, Util.State, Environment.Axiom, Environment.Foreign, Environment.Value, Environment.Context, Syntax, Alpha.Elf, Alpha.Options
  hs-source-dirs: src
  c-sources:      src/Alpha/writeElf.c
